--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script type="text/javascript" src="app.js"></script>
 </head>
 <body>
-<p>Base project I, Miles Johnson, day 2</p>
+<p>Base project 1, Miles Johnson, day 2</p>
 
 
 
